Fixed Carousel Alignment
- Fixed Carousel Layout Issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,9 +301,9 @@
   font-family: 'Lato', sans-serif;
   font-size: 2rem;
   text-align: center;
-  padding-bottom: 3rem;
   position: absolute;
   bottom: 0;
+  left: 50%;
   transform: translateX(-50%); }
   .menu-link a {
     color: #fff;
